# noisetools

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
data_acquisition/: 4-channel.py  francois.py  requirements
noisetools/: __init__.py  configspec.aurlite  demo_array.py  hawc2.py  octave_band.py  octave_band_limits.csv  sound_levels.py  tone_generation.py  wavfile.py  weighting_functions.py  weighting_table.csv  wintaur.py
noisetools/pysqat/: __init__.py
noisetools/pysqat/SQAT-1.1/: README.md  startup_SQAT.m
noisetools/pysqat/SQAT-1.1/psychoacoustic_metrics/Loudness_ISO532_1/: Loudness_ISO532_1.m  Loudness_ISO532_1_from_wavfile.m
noisetools/pysqat/SQAT-1.1/psychoacoustic_metrics/PsychoacousticAnnoyance_Di2016/: PsychoacousticAnnoyance_Di2016.m  PsychoacousticAnnoyance_Di2016_from_percentile.m  PsychoacousticAnnoyance_Di2016_from_wavfile.m
noisetools/pysqat/SQAT-1.1/psychoacoustic_metrics/PsychoacousticAnnoyance_More2010/: PsychoacousticAnnoyance_More2010.m  PsychoacousticAnnoyance_More2010_from_percentile.m  PsychoacousticAnnoyance_More2010_from_wavfile.m
noisetools/pysqat/SQAT-1.1/psychoacoustic_metrics/PsychoacousticAnnoyance_Zwicker1999/: PsychoacousticAnnoyance_Zwicker1999.m  PsychoacousticAnnoyance_Zwicker1999_from_percentile.m  PsychoacousticAnnoyance_Zwicker1999_from_wavfile.m
noisetools/pysqat/SQAT-1.1/psychoacoustic_metrics/Roughness_Daniel1997/: Roughness_Daniel1997.m  Roughness_Daniel1997_from_wavfile.m
noisetools/pysqat/SQAT-1.1/psychoacoustic_metrics/Sharpness_DIN45692/: Sharpness_DIN45692.m  Sharpness_DIN45692_from_loudness.m  Sharpness_DIN45692_from_wavfile.m
noisetools/pysqat/SQAT-1.1/psychoacoustic_metrics/Tonality_Aures1985/: Tonality_Aures1985.m  Tonality_Aures1985_from_wavfile.m
noisetools/pysqat/SQAT-1.2/: startup_SQAT.m
noisetools/pysqat/SQAT-1.2/psychoacoustic_metrics/Loudness_ISO532_1/: Loudness_ISO532_1.m  Loudness_ISO532_1_from_wavfile.m
noisetools/pysqat/SQAT-1.2/psychoacoustic_metrics/PsychoacousticAnnoyance_Di2016/: PsychoacousticAnnoyance_Di2016.m  PsychoacousticAnnoyance_Di2016_from_wavfile.m
noisetools/pysqat/SQAT-1.2/psychoacoustic_metrics/PsychoacousticAnnoyance_More2010/: PsychoacousticAnnoyance_More2010.m  PsychoacousticAnnoyance_More2010_from_wavfile.m
noisetools/pysqat/SQAT-1.2/psychoacoustic_metrics/PsychoacousticAnnoyance_Zwicker1999/: PsychoacousticAnnoyance_Zwicker1999.m  PsychoacousticAnnoyance_Zwicker1999_from_wavfile.m
noisetools/pysqat/SQAT-1.2/psychoacoustic_metrics/Roughness_Daniel1997/: Roughness_Daniel1997.m  Roughness_Daniel1997_from_wavfile.m
noisetools/pysqat/SQAT-1.2/psychoacoustic_metrics/Sharpness_DIN45692/: Sharpness_DIN45692.m  Sharpness_DIN45692_from_loudness.m  Sharpness_DIN45692_from_wavfile.m
noisetools/pysqat/SQAT-1.2/psychoacoustic_metrics/Tonality_Aures1985/: Tonality_Aures1985.m  Tonality_Aures1985_from_wavfile.m
noisetools/pysqat/SQAT-1.2/utilities/: calibrate.m
python-noise-toolbox/: __init__.py
