[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project]
name='noisetools'
version='0.1.0'
description='A Python toolbox with all the signal analysis and research tools for my PhD.'
readme='README.md'
license = 'Apache-2.0 AND CC-BY-NC-4.0'
license-files = ['LICENSE', 'noisetools/pysqat/SQAT-1.2/LICENSE']
authors=[
    {'name' = 'Josephine Siebert Pockelé', email='j.s.pockele@tudelft.nl'}
]
requires-python='>=3.9'
dependencies=[
    'numpy>=2.0.0',
    'scipy>=1.12.0',
    'matplotlib>=3.8.3',
    'configobj>=5.0.9',
	'pandas>=2.2.2',
]
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: Microsoft :: Windows :: Windows 11',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Utilities',
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ['nrel', 'ntk', ]

[project.optional-dependencies]
pysqat = [
    'matlabengine',
]
dev = [
    'pytest>=8.0.2',
    'twine>=5.0.0',
    'pandas>=2.2.1',
    'sphinx',
    'numpydoc',
]

[project.urls]
source = 'https://gitlab.tudelft.nl/jpockele/josephines-bag-of-tricks'
